Closed Bug 1250842 Opened 9 years ago Closed 9 years ago

Fix initialization of script source object when modules are compiled off main thread

Categories

(Core :: JavaScript Engine, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla47
Tracking Status
firefox47 --- fixed

People

(Reporter: jonco, Assigned: jonco)

References

Details

Attachments

(1 file, 1 obsolete file)

Attached patch fix-script-source-omt (obsolete) — Splinter Review
Just like CompileScript, CompileModule needs to pass back the script source object so that it can be initialized when off main thread parsing is complete.
Attachment #8722935 - Flags: review?(shu)
...and attach a version that works this time.
Attachment #8722935 - Attachment is obsolete: true
Attachment #8722935 - Flags: review?(shu)
Attachment #8722940 - Flags: review?(shu)
Attachment #8722940 - Flags: review?(shu) → review+
https://hg.mozilla.org/mozilla-central/rev/5a5874ed9033
Status: NEW → RESOLVED
Closed: 9 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla47
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: