Bug 1250842 - Fix initialization of script source object when modules are compiled off main thread r=shu